deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - secretName: tls-secret
  rules:
  - host: dkne.169.56.174.130.nip.io
    http:
      paths:
      - path: /front
        pathType: Prefix
        backend:
          service:
            name: front
            port:
              number: 80
